Update common new character popup

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "nuxt": "^3.14.159",
     "primevue": "^4.2.2",
     "radix-vue": "^1.9.9",
-    "shadcn-nuxt": "^0.11.2",
-    "shadcn-vue": "0.11.2",
+    "shadcn-nuxt": "0.10.4",
+    "shadcn-vue": "0.10.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
