--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@primevue/nuxt-module": "^4.2.2",
     "@primevue/themes": "^4.2.2",
     "@tauri-apps/api": "^2.1.1",
+    "@tauri-apps/plugin-dialog": "~2",
     "@vueuse/core": "^11.2.0",
     "@vueuse/nuxt": "^11.2.0",
     "class-variance-authority": "^0.7.0",
