--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -21,6 +21,9 @@ tauri-build = { version = "2.0.2", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.1.0", features = [] }
+tauri = { version = "2.1.0", features = ["protocol-asset"] }
 tauri-plugin-log = "2.0.0-rc"
 cpal = "0.15.3"
+zip = "2.2.0"
+toml = "0.8.19"
+tauri-plugin-dialog = "2"
